--- a/peliculas/build.gradle
+++ b/peliculas/build.gradle
@@ -18,6 +18,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-cache:3.2.2'
+	implementation 'org.springframework.boot:spring-boot-starter-security:3.2.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
